--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "PhysicsJS": "physicsjs#1.0.0-rc1",
     "requirejs": "~2.1.20",
-    "pixi.js": "pixi#~2.1.0"
+    "pixi.js": "pixi#~2.1.0",
+    "bootstrap": "~3.3.5"
   }
 }
