--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "bower-requirejs": "^1.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/guiwoda/quimica/issues"
   },
-  "homepage": "https://github.com/guiwoda/quimica#readme"
+  "homepage": "https://github.com/guiwoda/quimica#readme",
+  "dependencies": {
+    "bower": "^1.6.5",
+    "express": "^4.13.3"
+  }
 }
