--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bower-requirejs": "^1.2.0"
   },
   "scripts": {
+    "start": "node index.js",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
